# POKEMON_DBGAS

./: .gitignore  AGENTS.md  README.md  all_issues.txt  analysis.ipynb  move_resolver.py  pokedata_cache_manager.py  pyproject.toml  showdown_data_manager.py  showdown_manager.py  species_resolver.py  tournament_teams_extraction.py
data/showdown/: abilities.json5  abilities.json5.etag  formats-data.js  formats-data.js.etag  formats.js  formats.js.etag  items.json5.etag  learnsets.json  learnsets.json.etag  moves.json.etag  pokedex.json  pokedex.json.etag
tests/: test_move_resolution_integration.py  test_move_resolver.py  test_pokedata_cache_manager.py  test_showdown_data_integration.py  test_showdown_data_manager.py  test_species_resolution_integration.py  test_tournament_teams_extraction.py
