[project]
name = "poke-dbgas"
version = "0.1.0"
description = "Pokemon Double Battle Genetic Algorithm Simulator"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Douglas Winston" },
]
dependencies = [
    "json5>=0.9.25",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "ipykernel>=6.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]
